2014-05-12 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
        Fix warning and perhaps wrong +bomLength

Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.m
	SOQL query parser to extract fields.